revise html for header/hero section

--- a/index.html
+++ b/index.html
@@ -5,24 +5,32 @@
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link href="/landing-page/style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">   
     </head>
 
     <body>
         <header> <!--Should the header have this much in it?-->
-            <h6>Header Logo</h6>
-            <nav>
-                <ul>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
-            </nav>
-            <div>
-                <h1>This website is awesome</h1>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
-                <button>Sign Up</button>
-                <img src="not_found.jpg" rel="image-error">
-            </div>
+            <div class="header">
+                <h6>Header Logo</h6>
+                <nav>
+                    <ul>
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
+                    </ul>
+                </nav>
+            </div> <!--close top-header-->
+
+            <div class="hero">
+                <div class="hero-text">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
+                    <button>Sign Up</button>
+                </div> <!--close header-writeu[]-->
+                <img src="https://images.pexels.com/photos/2031706/pexels-photo-2031706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" rel="image-error">
+            </div> <!--close bottom-header-->
         </header>
 
          <div>  <!--Should these be sections?-->
