write css and update html for section two

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
-        <link href="/landing-page/style.css" rel="stylesheet">
+        <link href="/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">   
@@ -29,25 +29,28 @@
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the colour is lower contrast</p>
                     <button>Sign Up</button>
                 </div> <!--close header-writeu[]-->
-                <img src="https://images.pexels.com/photos/2031706/pexels-photo-2031706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" rel="image-error">
+                <img src="https://images.pexels.com/photos/2031706/pexels-photo-2031706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="amsterdam canals with multiple boats">
             </div> <!--close bottom-header-->
         </header>
 
-         <div>  <!--Should these be sections?-->
+         <div class="section-two">  <!--Should these be sections?-->
             <h2>Some Random Information</h2>
-            <div>
-                <div>
-                    <img src="not_found.jpg" rel="image-error">
+            <div class ="container"> <!-- Find a better name?-->
+                <div class="img-container">
+                    <img src="https://images.pexels.com/photos/1879321/pexels-photo-1879321.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="man pouring coffee in white cup">
                     <p>this is some subtext under an illisration or image</p>
                 </div>
-                <div>
-                    <img src="not_found.jpg" rel="image-error">
+                <div class="img-container">
+                    <img src=https://images.pexels.com/photos/1426620/pexels-photo-1426620.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="neon lights ona building at night">
                     <p>this is some subtext under an illisration or image</p>
                 </div>
-                <div>
-                    <img src="not_found.jpg" rel="image-error">
+                <div class="img-container">
+                    <img src="https://images.pexels.com/photos/2901480/pexels-photo-2901480.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" rel="water canals with one boat under a bridge">
                     <p>this is some subtext under an illisration or image</p>
-                    <img src="not_found.jpg" rel="image-error">
+                </div>
+                <div class="img-container">
+                    <img src="https://images.pexels.com/photos/3962978/pexels-photo-3962978.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" rel="water canals at night with lights">
+                    <p>this is some subtext under an illisration or image</p>
                 </div>
             </div> <!--close -->
         </div>  <!--close -->
