--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="UTF-8">
         <title>Landing Page</title>
         <link href="/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">   
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,100&display=swap" rel="stylesheet">  
     </head>
 
     <body>
@@ -55,10 +54,15 @@
             </div> <!--close -->
         </div>  <!--close -->
 
-        <div> <!--Should these be sections?-->
-            <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
-            <p>Thor, God of Thunder</p>
+        <div class="section-three"> <!--Should these be sections?-->
+            <div class="quote">
+                <p>This is an inspiring quote or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice</p>
+            </div> 
+            <div class="author">
+                <p>-Thor, God of Thunder</p>
+            </div>
         </div>
+
         <div> <!--Should these be sections?-->
             <div>
                 <h3>Call to action! It's time!</h3>
