update css and html for section four and footer

--- a/index.html
+++ b/index.html
@@ -63,16 +63,20 @@
             </div>
         </div>
 
-        <div> <!--Should these be sections?-->
-            <div>
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking that button right over there!</p>
-                <button>Sign Up</button>
+        <div class="section-four"> <!--Should these be sections?-->
+            <div class="cta-container">
+                <div class="cta-text-container">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="cta-btn-container">
+                    <button>Sign Up</button>
+                </div>
             </div>
         </div >
 
         <footer>
-            <p>Copywright @ The Odin Project 2021</p>
+            <p>Copyright @ The Odin Project 2021</p>
         </footer>
     </body>
 </html>
